# ui-composer

./: Cargo.toml  How Does It Work.md  README.md  dbg.txt  justfile  todo.md  todos.json
crates/basic-ui/: Cargo.toml
crates/basic-ui/src/: lib.rs
crates/basic-ui/src/components/: debug.rs  image.rs  mod.rs
crates/basic-ui/src/interaction/: drag.rs  hover.rs  mod.rs  tap.rs  typing.rs
crates/basic-ui/src/interaction/implementations/: mod.rs
crates/basic-ui/src/items/: debug.rs  drag.rs  hover.rs  mod.rs  tap.rs
crates/basic-ui/src/items/implementations/: mod.rs
crates/basic-ui/src/layout/: center.rs  column.rs  inline.rs  mod.rs  row.rs  with_size.rs
crates/basic-ui/src/layout/flex/: mod.rs
crates/basic-ui/src/primitives/: graphic.rs  image_quad.rs  mod.rs  text.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: lib.rs  shaders.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/app/: mod.rs
crates/core/src/app/composition/: mod.rs  visit.rs
crates/core/src/app/composition/algebra/: implementations.rs  mod.rs
crates/core/src/app/composition/convert/: mod.rs
crates/core/src/app/composition/effects/: future.rs  mod.rs  signal.rs
crates/core/src/app/composition/elements/: implementations.rs  mod.rs
crates/core/src/app/composition/layout/: hints.rs  mod.rs
crates/core/src/app/composition/layout/implementations/: tuples.rs
crates/core/src/app/runner/: futures.rs  mod.rs
crates/core/src/items/: drag.rs  hover.rs  tap.rs  typing.rs
crates/derive-ui/: Cargo.toml
crates/derive-ui/src/: lib.rs
crates/derive-ui/tests/: simple.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: geometry_ext.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/lullaby-ui/: Cargo.toml
crates/lullaby-ui/src/: lib.rs  text.rs
crates/lullaby-ui/src/components/: button.rs  label.rs  mod.rs  panel_container.rs
crates/lullaby-ui/src/convert/: mod.rs
crates/lullaby-ui/src/layout/: center.rs  column.rs  row.rs  with_size.rs
crates/lullaby-ui/src/primitives/: graphic.rs  mod.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/platform-tui/: Cargo.toml
crates/platform-tui/src/: blueprints.rs  lib.rs  nodes.rs  render.rs  runner.rs
crates/platform-winit/: Cargo.toml
crates/platform-winit/src/: lib.rs  render.rs  runner.rs  window.rs  winit_uic_conversion.rs
crates/platform-winit/src/gpu/: mod.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/uix/: Cargo.toml
crates/uix/src/: config.rs  lib.rs  tags.rs
crates/uix/src/blocks/: bind_expr.rs  closure_expr.rs  mod.rs
crates/uix/tests/: closure.rs  containers.rs  simple.rs
crates/view-macro/: Cargo.toml
crates/view-macro/src/: lib.rs
crates/view-macro/src/transform/: codegen.rs  mod.rs  parser.rs
crates/view-macro/tests/: simple.rs
design/lullaby/: colors.css  elements.css  file-explorer.html  index.html  justfile  rust-code-mockup.rs  style.css  typography.css
examples/: anim.rs  animation.rs  animation_springs.rs  animator_api.rs  button.rs  capture_settings.cap  container.rs  counter.rs  custom_closure.rs  custom_window.rs  drag.rs  empty.rs  empty_app.rs  events.rs  futures.rs  html-like.rs  inline.rs  interactive_animation.rs  layout.rs  nerd-fonts.rs  nerd_fonts.rs  nested_flex.rs  obligarory_reactive_counter.rs  pipelines.rs  render_to_texture.rs  simple.rs  simple_app.rs  square.rs  switch.rs  tap.rs  terminal-app.rs  terminal_app.rs  test.rs  text.rs  text_anim.rs  trait-picking.rs  tui.rs  typing.rs  ui_composer_style_mockup.md  view-macro.rs
examples/alloc/: main.rs
examples/animation/: anim.rs  main.rs
examples/apis/: main.rs
examples/blueprint_resources/: main.rs
examples/components/: main.rs
examples/compose/: main.rs
examples/container/: main.rs
examples/custom-runner/: main.rs
examples/custom_runner/: main.rs
examples/data_structures/: main.rs  paginator.rs
examples/editor/: main.rs  todos.toml
examples/editor-pattern/: main.rs
examples/effect_visitor/: executor.rs  future.rs  main.rs  render.rs
examples/example-android/: Cargo.toml
examples/example_app/: main.rs
examples/experimental-into-ui/: main.rs
examples/extract/: main.rs
examples/futures/: data.json  idea.md  main.rs  martha.json  pedro.json
examples/generics/: main.rs
examples/grid/: main.rs
examples/images/: main.rs
examples/into-ui/: main.rs
examples/layout/: main.rs
examples/orchestra/: main.rs
examples/quad-stress-test/: main.rs
examples/reactivity/: main.rs
examples/reactor-stress-test/: main.rs
examples/reactors/: main.rs
examples/simple/: main.rs
examples/simple-app/: main.rs
examples/static/: main.rs
examples/terminal/: main.rs
examples/test/: main.rs
examples/text/: main.rs
examples/tiny/: main.rs
examples/web/: main.rs
examples/window/: main.rs
examples/winit/: main.rs
src/: app.rs  lib.rs  prelude.rs  shader.wgsl
src/alloc/: mod.rs  ui_fragment_impls.rs
src/animation/: mod.rs
src/app/: building_blocks.rs  engine.rs  implementations.rs  mod.rs  node.rs  primitives.rs  render_state.rs
src/backend/: mod.rs
src/backends/: mod.rs
src/components/: mod.rs
src/experimental/: mod.rs
src/fp/: mod.rs
src/fragments/: mod.rs
src/geometry/: aabb.rs  extensions.rs  geometry_ext.rs  mod.rs  rect_ext.rs
src/geometry_ext/: mod.rs
src/gpu/: backend.rs  engine.rs  mod.rs  render_target.rs
src/interaction/: hover.rs  keyboard.rs  mod.rs  tap.rs
src/layout/: flow.rs  hints.rs  mod.rs
src/prelude/: macros.rs  mod.rs
src/reaction/: mod.rs
src/render_module/: mod.rs  reactivity_processing.rs
src/signal_ext/: mod.rs
src/signals/: mod.rs
src/standard/: mod.rs  primitive.rs  render_stack.rs  standard-shader.wgsl  standard_pipeline.rs  ui_fragment_impls.rs
src/state/: extensions.rs  mod.rs  process.rs  signal_ext.rs
src/tui/: mod.rs  pipeline.rs  terminal.rs
src/ui/: graphics.rs  interactor.rs  layout.rs  mod.rs  node.rs  react.rs
src/wgpu/: mod.rs  render_target.rs
src/winit/: mod.rs
src/winitwgpu/: mod.rs  prelude.rs  render_target.rs
(+274 files in other folders)
