[package]
edition = "2024"
name = "ui-composer"
version = "0.1.0"

[package.metadata.ui_composer]
uix_containers = ["flex", "row", "column"]

[lib]
name = "ui_composer"
# crate-type = ["dylib"]

[dependencies]

### Futures and Asynchronicity ###
async-std = "1.13.0"
futures-signals = "0.3.33"
futures-time = "3.0.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
pin-project = "1.1.5"

### Geometry ###
vek = { version = "0.17.0", features = ["bytemuck"] }
num-traits = "0.2.19"

### Rendering
bytemuck = { version = "1.16.1", features = ["derive"] }
glyphon = { git = "https://github.com/grovesNL/glyphon.git" }
wgpu = { version = "28.0.0", default-features = false, features = [
    "wgsl",
    "vulkan",
    "webgpu",
    "gles",
    "metal",
    "dx12",
], optional = true }

### Data ###
serde = { version = "1.0.204", features = ["derive"], optional = true }
arrayvec = { version = "0.7.6", default-features = false }
ndarray = "0.17.2"
# rand = {version = "0.9.0-beta.3", features = []}
smol_str = "0.3.2"
spin = "0.10.0"
downcast-rs = { version = "2.0.2", default-features = false }
image = "0.25.6"

### Platforms: Winit ###
winit = { version = "0.30.7", optional = true }

### Platforms: Terminal ###
crossterm = { version = "0.29.0", optional = true, features = ["event-stream"] }

[features]
default = ["default-desktop", "serde", "tui"]

### Standard ###
std = ["downcast-rs/std"]
debug = []
serde = ["dep:serde"]

### Platform: Desktop ###
default-desktop = ["wgpu", "winit"]
winit = ["dep:winit", "std", "futures/executor"]
wgpu = ["dep:wgpu", "std"]

### Platform: Terminal ###
default-terminal = ["tui"]
tui = ["dep:crossterm", "std"]

### Experimental ###
specialization = []

[dev-dependencies]
chttp = "0.5.5"
serde_json = "1.0.134"
vek = { version = "0.17.0", features = ["serde"] }
winit = { version = "0.30.7" }
uix = { path = "../rust-tests/uix" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]

codegen-units = 1
lto = true
opt-level = 's'
strip = true      # Automatically strip symbols from the binary.
