[package]
edition = "2024"
name = "ui-composer"
version = "0.1.0"

[workspace]
members = [
    "crates/input",
    "crates/core",
    "crates/geometry",
    "crates/state",
    "crates/canvas",
    "crates/macros",
    "crates/platform-tui",
    "crates/platform-winit",
    "crates/uix",
    "crates/view-macro",

    # Design Libraries
    "crates/lullaby-ui",
    "examples/example-android",
]

[lib]
name = "ui_composer"
# crate-type = ["dylib"]

[dependencies]
ui-composer-core = { path = "crates/core" }
ui-composer-platform-tui = { path = "crates/platform-tui" }
ui-composer-platform-winit = { path = "crates/platform-winit" }

[dev-dependencies]
ui-composer-state = { path = "crates/state" }
ui-composer-macros = { path = "crates/macros" }
ui-composer-geometry = { path = "crates/geometry" }
ui-composer-basic-ui = { path = "crates/basic-ui" }

uix = { path = "crates/uix" }
ui-composer-view-macro = { path = "crates/view-macro" }

vek = "*"
lullaby-ui = { path = "crates/lullaby-ui" }
futures = "*"
chttp = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]

codegen-units = 1
lto = true
opt-level = 's'
strip = true      # Automatically strip symbols from the binary.
