[package]
edition = "2024"
name = "ui-composer-basic-ui"
version = "0.1.0"

[lib]
name = "ui_composer_basic_ui"
# crate-type = ["dylib"]

[dependencies]
ui-composer-geometry = { path = "../geometry" }
ui-composer-state = { path = "../state" }
ui-composer-input = { path = "../input" }
ui-composer-core = { path = "../core" }
vek = "0.17.2"

ui-composer-platform-tui = { path = "../platform-tui" }
ui-composer-platform-winit = { path = "../platform-winit" }

[features]
default = ["std"]
std = []
