[package]
edition = "2024"
name = "ui-composer-platform-tui"
version = "0.1.0"

[lib]
name = "ui_composer_platform_tui"

[dependencies]
ui-composer-input = { path = "../input" }
async-std = "1.13.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
futures-signals = "0.3.34"
pin-project = "1.1.10"
smol_str = "0.3.5"
ui-composer-canvas = { path = "../canvas" }
ui-composer-core = { path = "../core" }
ui-composer-geometry = { path = "../geometry" }
ui-composer-state = { path = "../state" }
#ui-composer-basic-ui = { path = "../basic-ui" }
vek = "0.17.2"
